bg-color and type 1 eingefügt

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <h1>POKEMON</h1>
     <div id="content">
         <!--card-->
+    </div>
+    <div onclick="closeDialog()" id="bgDialog" class="bg-dialog d-none">
 
     </div>
 </body>
