show actual singelcard

--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
         <!--card-->
     </div>
     <div onclick="closeDialog()" id="bgDialog" class="bg-dialog d-none">
-        <!-- <div>
-            <img onclick="arrowLeft()" class="arrow-left-right arrow" src="./icon/black-arrow-back.png" alt="">
-        </div> -->
+
         <div id="dialogCard" class="dialog-card"></div>
-        <!-- <div class="right-dialog-arrow-container" onclick="arrowRight()">
-            <img onclick="arrowRight()" class="arrow-left-right arrow" src="./icon/black-arrow-forward.png" alt="">
-        </div> -->
+
     </div>
+    <button id="loadButton" class="load-button" onclick="loadPokemons()">Load</button>
 </body>
 
 </html>
